# train-ticket-watcher

./: .gitignore  README.md  classes.py  logger_config.py  mailer.py  main.py  parser.py  pyproject.toml  server.py
config/: logger_config.py
src/: mailer.py  parser.py  server.py
